# seqlibJaPa

./: README.md  pyproject.toml
src/seqlibJaPa/: Seq.py  __init__.py
