[build-system]
requires = ['setuptools>=79.0', 'wheel>=0.45']
build-backend = 'setuptools.build_meta'

[project]
name = 'seqlibJaPa'
version = '0.1.3'
authors = [
  { name = 'Jan Pamuła', email = 'jan.pamula@student.uj.edu.pl' }
]
maintainers = [
  { name = 'Jan Pamuła', email = 'jan.pamula@student.uj.edu.pl' },
]
description = 'DNASeq is a Python library for reading and analyzing fasta files witch GeneBank notatnion.'
readme = 'README.md'
license = 'GPL-3.0-or-later'
license-files = [ 'LICENSE*' ]
keywords = [
    'biological sequences', 'nucleotide sequences',
    'sequence manipulation', 'bioinformatics'
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
requires-python = '>=3.8'
dependencies = [
    'pandas>=2.2',
    'matplotlib>=3.8',
    'scipy>=1.12'
]

[project.optional-dependencies]
dev = [
    'pytest>=8.3',
    'ruff>=0.11',
    'build>=0.10',
    'twine>=6.1'
]

[project.urls]
Homepage = 'https://github.com/PamJan/seqlibJaPa'
Repository = 'https://github.com/PamJan/seqlibJaPa'
'Bug Tracker' = 'https://github.com/mb/PamJan/seqlibJaPa/issues'

